--- a/index.html
+++ b/index.html
@@ -6,15 +6,46 @@
 <head>
   <title></title>
 <link href="style/style.css" rel="stylesheet" type="text/css">
-<link href="style/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
+<link href="style/bootstrap.css" rel="stylesheet" type="text/css">
 <meta charset="utf-8">
-<script src="js/bootstrap.min.js" type="text/javascript"> </script>
+<script src="js/bootstrap.js" type="text/javascript"> </script>
 <script src="js/jquery-1.11.2.min.js" type="text/javascript"> </script>
 
 </head>
 
 <body>
-
+<div class="container">
+  <div class="main_form">
+  	<div class="login">
+    </div>
+    <div class="propeties">
+    	<div class="preview">
+        	<img src="img/preview.jpg" class="img-polaroid">
+        </div>
+        <div class="slider1"><input type="range" min="0" max="100" step="1" value="50"> </div>
+        <div class="slider2"><input type="range" min="0" max="100" step="1" value="50"> </div>
+        <div class="slider3"><input type="range" min="0" max="100" step="1" value="50"> </div>
+        <div class="slider4"><input type="range" min="0" max="100" step="1" value="50"> </div>
+        <div class="slider5"><input type="range" min="0" max="100" step="1" value="50"> </div>
+        <div class="slider6"><input type="range" min="0" max="100" step="1" value="50"> </div>
+        <div class="radio1"><input type="radio" checked="checked" name="tri" id="tri1"/>male      
+        <input type="radio" name="tri" id="tri2"/>female</div>
+        <div class="AP">
+        	<button class="btn" type="button">AddPhoto</button>
+        </div>
+        <div class="SP">
+        	<button class="btn" type="button">SaveParametres</button>
+        </div>
+        </div>
+    
+  	<div class="close">
+    	<i class="glyphicon glyphicon-off"></i>
+    </div>
+  	<div class="view_body">
+    </div>
+  
+  </div>
+</div>
 </body>
 
 </html> 
